--- a/index.html
+++ b/index.html
@@ -1,2 +1,45 @@
-<html><body></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>BeerImg Flag Catalog</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
+    h1 { text-align: center; }
+    .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 15px; }
+    .gallery img { width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.2); }
+    .caption { text-align: center; font-size: 14px; margin-top: 5px; }
+    .item { background: #fff; padding: 10px; border-radius: 10px; }
+  </style>
+</head>
+<body>
+  <h1>BeerImg Flag Catalog</h1>
+
+  <h2>Country Flags</h2>
+  <div class="gallery">
+    <div class="item">
+      <img src="country/russia.png" alt="Russia">
+      <div class="caption">Russia</div>
+    </div>
+    <div class="item">
+      <img src="country/new-zealand.png" alt="New Zealand">
+      <div class="caption">New Zealand</div>
+    </div>
+    <!-- Add more countries here -->
+  </div>
+
+  <h2>Regional Flags</h2>
+  <div class="gallery">
+    <div class="item">
+      <img src="Region/Nepal.png" alt="Nepal">
+      <div class="caption">Nepal</div>
+    </div>
+    <div class="item">
+      <img src="Region/Madeira.png" alt="Madeira">
+      <div class="caption">Madeira</div>
+    </div>
+    <!-- Add more regions here -->
+  </div>
+</body>
+</html>
 
