--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>BeerImg Test</title>
-</head>
 <body>
-  <h1>Hello BeerImg!</h1>
-  <p>If you see this, GitHub Pages is working.</p>
+  <h1>BeerImg Flag Catalog</h1>
+  <p>Single image test:</p>
+  <img src="country/russia.png" alt="Russia" width="200">
 </body>
-</html>
