--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
   <h1>BeerImg Flag Catalog</h1>
   <p>Single image test:</p>
-  <img src="country/russia.png" alt="Russia" width="200">
+  <img src="Test/russia.png" alt="Russia" width="200">
 </body>
